<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tasks.pages.TaskChange">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/TaskNameLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Task_name" />

            <EditText
                android:id="@+id/TaskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/TaskDescriptionLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Task_description" />

            <EditText
                android:id="@+id/TaskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/WhichDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ChooseDayOn" />

            <RadioButton
                android:id="@+id/Monday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Monday" />

            <RadioButton
                android:id="@+id/Tuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tuesday" />

            <RadioButton
                android:id="@+id/Wednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Wednesday" />

            <RadioButton
                android:id="@+id/Thursday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Thursday" />

            <RadioButton
                android:id="@+id/Friday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Friday" />

            <RadioButton
                android:id="@+id/Saturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Saturday" />

            <RadioButton
                android:id="@+id/Sunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sunday" />

        </LinearLayout>

        <Button
            android:id="@+id/TaskType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HoldToChangeType" />
    </LinearLayout>

    <Button
        android:id="@+id/AcceptChange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="acceptChanges"
        android:text="@string/Accept"
        android:textSize="16sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>